--- a/index.html
+++ b/index.html
@@ -265,6 +265,51 @@
 </div>
 
 
+<!--ポートフォリオ3-->
+<div class="portfolio-wrap">
+  <div class="pop-box">
+<label for="popup-on2"><span class="btn-open">
+ <span class="port-title ">エステサロンLP <br />(既存のデザインを利用）</span><img src="./images/portfolio/beauty_salon.jpg" alt="" class="layer-img"></span></label>
+<input type="checkbox" id="popup-on2">
+<div class="popup2">
+<label for="popup-on2" class="icon-close">×</label>
+<div class="popup-content">
+  <!-- ポップアップの中身 -->
+  <p class="pop-detail">エステサロンLP <br>(既存のデザインを利用)</p>
+ <a href="https://kasumi-s.github.io/k-total-beauty/"><img src="./images/portfolio/beauty_salon.jpg" alt="" class="layer-img"></a><br />
+ 
+<div class="portfolio-Detail">
+   <div class="port-head">【担当】</div>
+   <div class="port-body">コーディング</div>
+ </div>
+   
+
+<div class="portfolio-Detail">
+   <div class="port-head">【サイトの作成目的】</div>
+   <div class="port-body">スクールでデザインを見ながら自分で１からコーディングするという課題で作成しました。</div>
+</div>
+
+<div class="portfolio-Detail">
+   <div class="port-head">【作成理由】</div>
+   <div class="port-body">コーディングの練習と自分がどの程度できるかを確認したかったため挑戦しました。</div>
+</div>
+
+<div class="portfolio-Detail">
+   <div class="port-head">【コメント】</div>
+    <div class="port-body">１から自分デーコーディングをすることの難しさと楽しさを改めて実感いたしました。もっと勉強をしていきたいです。</div>
+</div>
+<div class="portfolio-link">
+<p class="port-link">Link：<a href="https://kasumi-s.github.io/k-total-beauty/"> Les bases du Ballet</a>
+ 
+   <!-- ./ポップアップの中身　ここまで -->
+</div>
+<label for="popup-on2"><span class="btn-close">CLOSE</span></label>
+
+</div>
+</div>
+</div>
+</div>
+
 
     </div>      
 </section>
